--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <<table cellspacing="20">
     <tr>
-      <td><img src="images/foto.png" alt="Ja "></td>
+      <td><img src="images/foto.PNG" alt="Ja "></td>
       <td>
         <h1>Mariusz Psuj</h1>
         <p> <em>Przyszly programista w </em> <strong>Sii</strong></p>
